# ChangeLog for app-editors/nano
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/ChangeLog,v 1.320 2015/04/01 08:22:51 ago Exp $

  01 Apr 2015; Agostino Sarubbo <ago@gentoo.org> nano-2.3.6.ebuild:
  Stable for sparc, wrt bug #541548

  31 Mar 2015; Agostino Sarubbo <ago@gentoo.org> nano-2.3.6.ebuild:
  Stable for ppc64, wrt bug #541548

  27 Mar 2015; Mike Frysinger <vapier@gentoo.org>
  +files/nano-2.4.0-no-speller.patch, nano-2.4.0.ebuild:
  Add upstream fix for building with USE=-spell #544296 by Karl Lindén.

*nano-2.4.0 (23 Mar 2015)

  23 Mar 2015; Mike Frysinger <vapier@gentoo.org> +nano-2.4.0.ebuild:
  Version bump.

  23 Mar 2015; Mike Frysinger <vapier@gentoo.org> nano-2.3.6.ebuild:
  Mark arm/arm64/ia64/m68k/s390/sh stable #541548.

  06 Mar 2015; Mikle Kolyada <zlogene@gentoo.org> nano-2.3.6.ebuild:
  x86 stable wrt bug #541548

  05 Mar 2015; Jeroen Roovers <jer@gentoo.org> nano-2.3.6.ebuild:
  Stable for HPPA (bug #541548).

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> nano-2.3.6.ebuild:
  Stable for ppc, wrt bug #541548

  28 Feb 2015; Agostino Sarubbo <ago@gentoo.org> nano-2.3.6.ebuild:
  Stable for amd64, wrt bug #541548

*nano-2.3.6 (29 Jul 2014)

  29 Jul 2014; Mike Frysinger <vapier@gentoo.org> +nano-2.3.6.ebuild:
  Version bump #518492 by Lars Wendler.

*nano-2.3.4 (16 Jun 2014)

  16 Jun 2014; Mike Frysinger <vapier@gentoo.org> +nano-2.3.4.ebuild:
  Version bump.

  10 Jun 2014; Mike Frysinger <vapier@gentoo.org> nano-2.3.3.ebuild:
  Fix clean up of /trash #512524 by Yi Yang.

  02 Jun 2014; Mike Frysinger <vapier@gentoo.org> nano-2.3.3.ebuild:
  Fix deletion of extraneous html pages #512142 by Justin Lecher.

*nano-2.3.3 (30 May 2014)

  30 May 2014; Mike Frysinger <vapier@gentoo.org> +nano-2.3.3.ebuild:
  Version bump.

  16 Mar 2014; Mike Frysinger <vapier@gentoo.org>
  files/nano-2.3.1-gentoo-nanorc.patch:
  Highlight trailing whitespace in /etc/portage files.
