@@ -36,24 +36,16 @@ EBUILD nano-2.3.2-r1.ebuild 2491 SHA256 13f79d6a45e1367b7dc73171874f7d76ffc5ee60
 EBUILD nano-2.3.2.ebuild 2354 SHA256 31b38065f30abec98afea932a8996d54efe2d0eb730bb863157aefcf111f5bf0 SHA512 85bb07b0f67bbbed9af7cc691acd5345049d64113b62e862e3d8c735cf7905dd9a17500e550b1563297175147b420f26fce39b8e34a9271582ef081f233cda8d WHIRLPOOL 3cc06913ebd994167ca1a574a4e0d768fa1f3e4efe1c47c02c354a574c0fd4042a72472e3e7e9a7270109c6d96be92a4253008b8a341cd86b570d99a2241a7d4
 EBUILD nano-2.3.3.ebuild 2249 SHA256 c5ad0efc252f3474314ae382bd5695b49a6269c66001e9eb22449753c6909233 SHA512 fb694bb88320ba5bc86dad423380ec8fbc7ab4c444e6c9f08bd0b8b7ce53f2fdbd64a35d98d3800e66de4f8a958f17af2580e59858a19660e5ca3abe312e2218 WHIRLPOOL b46c3c80d440fd70194469bb3a5971fc18eeeebdfdc6a78d196da6333c42f407a1a35194d0d02160a668fd30a62b6fe31759ecf036895bdeadff56d160b56a6a
 EBUILD nano-2.3.4.ebuild 2249 SHA256 ab6517545d09a8e2f5dec0bbf3d7abcaff3e3dc28801c8a8f69ef0adc7822746 SHA512 d567a1706fd819ef6cf30d6fb98c20beaa228c09bcb6daa9d131f0f1be85f5a284dd8f257f916d3366e6680c4790b9e464408015bbbf6e31bd1d56ddef9d0653 WHIRLPOOL 4e9993c72636c29e3bd59ed59450c4db9a02dddd6a544f930d0fa4fc8cb565af5dcf7a7a6219364cedcf7820bf57ce2b2f93618ffee2e3031ed184fe9c37f875
-EBUILD nano-2.3.6.ebuild 2234 SHA256 29db0db86cec8c942b448a8ff44607ffa6a82dbb2798cbcf1a376b87969a25dd SHA512 260cdf24faac8c75b60ffc944b2caa5c348079f3fe0bb782a5b96be7d7a06e08f10e47c7465ce83e009655f540fd236a4d91dd2e134269d0248f1d4654cd20dc WHIRLPOOL aa10abdcd40ce1e45e96d1efc0ab62394f3c24330c5156e2b915cc5dd5d1f6b3e2f9b5f041bb811a5346dbf3491514e013025bc2194769fc26db5bb355faebc9
+EBUILD nano-2.3.6.ebuild 2237 SHA256 8b69464edcf2a595149b81f4bfd4570d0aacd4136415a2be3e9d344bd63da2fb SHA512 bfa46017da12750f737ed1026ae3537408fd2347a53b67950ea546317b58a70feb2d56e6732a0a4cbf75ec25f1aaf4c8216c9d8d6e76e9873d9a506f0d081187 WHIRLPOOL fba8b4e540d6b1e00499285f2ccb581a86ca0c3327ccbc1d4fa5ab0dec4fe3e80f7bc3e6cf615d2c049f5ba66632595f7971ec1b8f3ad218077a05112df1ed0e
 EBUILD nano-2.4.0.ebuild 2301 SHA256 5d4fc525c5a8844fc2594f60196e85984c515f36cc7ffaa43d5a4c1a4354e420 SHA512 60f272fdcf0d71ab74ceb6911fd56813335629696aab60c575bc23929ca19ad44c59c476f04558bc3932ca52191ef211b08d0ef8fda943f613ebee67dcc437e2 WHIRLPOOL 1b6e5f7786e1be829cd9cdf0a0458b4d3bd86700b7731c720d9cb362610d0ecf0d93cc7d9bb8abc1c7ca85f413132b4379b041af5d3235d4d24e714d6fb10e79
-MISC ChangeLog 37559 SHA256 41851ee13b28bc0699209475819487087f72db0f4ce36840417c130b8a49c0f7 SHA512 c85f8644d62c783c3620ed236660e6b3b56a5dbf0ec046667415ca016b177b6eb60651f6c9e69cdffc78e9a8841e736a67d04ed89a6b2519f505a20581722069 WHIRLPOOL 053df202349f65f591eb1f1ab8b1bc56679104047d30064def1f810f5697cc3f26733b1d44d8c20217c914d8d69445836c4d8538b75ea5a63ed5476ca2692ae7
+MISC ChangeLog 37664 SHA256 bb432de98385520be0382c029814351df4b41307052accfaab4fc1570f67ce6e SHA512 2069375aa15b83ff4019d7612f7d6c56697d8b1d54bbcc64f55203db1994c44e84246053883c7c775d77adb0c39ba18fbd567c5012ba4bb0c42d4aa4fce2f28d WHIRLPOOL 8c82de6b31d193a3a2a124823e02c02c3b46549fee8cb1855a578a01542608314b1f72aebc6bd49c391dc59b5c8fcb0c4f742fa29b5df5e3c9beba6b98bc600a
 MISC metadata.xml 1495 SHA256 b6af8e3dc22f6d9ea0acd4b446469298e8bff0ca8834aa56fe0a6baa129399c9 SHA512 b2e0ec89520c02263d660a5a3d570e426999967af183344b066b2dd293fc958018f7c360a1df02ae5207b24f32914bc800311ea985043c60459a83abdf237da9 WHIRLPOOL 138f93840416fd75eefccaa6cf48d4f5fd908987b505ba4621157e85ca997dc1f6cc6bbf21059d8b0dec3f358605547a364a5b4982b8f43b52fe6d1be130da81
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVG6rcAAoJELp701BxlEWfT4UP/1/yRKDBnNmcI28nUNhKLUxG
-gBCL9e8mWfnBbVsO5D9KNE/0K0Y3K1nHoT5XSIzQCRKbQ4MnnmDeELJGvaYJREVQ
-02bp9ezCMmQlb4eux+tOlf3n4wBAYsdiq1AzUHe1mjq4rpyUNTuP/BNBvFUR53Cz
-Bl3oa1eUYcNim98BZk4PDbE8z1feEeLzb1P9yw+1XCyFpWZxnceOWVP6XOTAxu1Z
-uiE3lfxu36l0W2x3SldPTjZTX7/W9dRj3sBv2q9e/KpJLPvhvZ8lNppksAjXHD7H
-Q1i5HEi1qtdFJcgAdiKX2Xz6Z9QIG8smFthxevv4NByYJeC8fpZwgCNzM+2rqklW
-+FsWoQdrUp2QSzMiJ1SGdqxyQfmq1g0aVRmsA8DHIldQ+9APn0bUq6NC6p3EG06n
-9SKAVED6Ty71G/3y/JtHXhTYDW34Vq1Y0GYxOBdBjfUE2DJAzdLYA+pVorDiBSaT
-HSA6clYj1Sk23bnjS3lO29CPGLYWPdjKoJ73hRekcQ4ZJlq0ULyHwdD+kgkhfgey
-O2pjr4DbKnx6SeTodiSFc+kTK1SLlRbXtLlP7YlaMvIQoDJ0Spf0buYGQ/BCaQR7
-YpQ958YzwmS8eczGvcY+fmyCiFWf+GTq58UHKXUijDxbDqMa4GZFQpMMldkATP8Z
-M5xitheXapPBG/39v2sd
-=GYnq
+iJwEAQEIAAYFAlUpgkIACgkQG9wOWsQutdb9ZgP/TfAz6eclL62Gp8xDrkQB5OCV
+IZndRwa1ZOx/RZUqlFJOIw6D47X/SlHVVCMA42XFBj1OJ9syOMr3RMO9HDGgVsyf
+DtQLYpUGpETdHDqM44ORfP22H9YVt5V2JxEogebdkYKELmrX6TNpiS+Yk5IuGg4Q
+wgMzG0Vu5P6YF349DDs=
+=zSM+
 -----END PGP SIGNATURE-----
