@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/nano
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/ChangeLog,v 1.320 2015/04/01 08:22:51 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/ChangeLog,v 1.321 2015/04/11 20:23:14 zlogene Exp $
+
+  11 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> nano-2.3.6.ebuild:
+  alpha stable wrt bug #541548
 
   01 Apr 2015; Agostino Sarubbo <ago@gentoo.org> nano-2.3.6.ebuild:
   Stable for sparc, wrt bug #541548
